--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@
 .DS_Store
 *.swp
 *.Trashes
+Assets/EditorGUI Style Viewer.meta
+Assets/EditorGUI Style Viewer/Editor.meta
+Assets/EditorGUI Style Viewer/Editor/EditorStyleViewer.js
+Assets/EditorGUI Style Viewer/Editor/EditorStyleViewer.js.meta
+Assets/EditorGUI Style Viewer/Editor/StyleViewerExample.js
+Assets/EditorGUI Style Viewer/Editor/StyleViewerExample.js.meta
